Add checkbox for file transferring and apply correctif on protobuf

--- a/usbsas-client/resources/i18n/en.json
+++ b/usbsas-client/resources/i18n/en.json
@@ -58,5 +58,6 @@
     "sys": "System",
     "tools": "Tools",
     "usbsas": "usbsas",
-    "loading": "Loading"
+    "loading": "Loading",
+    "preserve_file": "Preserve file while transfer"
 }
